<resources>
    <string name="app_name">SplitB</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contect_number">Contact Number</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="welcome">WELCOME</string>
    <string name="do_have_an_account">Do have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log In</string>
    <string name="email_or_username">Email or Username</string>
    <string name="welcome_nback">WELCOME\nBACK</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="recover_npassword">Recover\nPassword</string>
    <string name="contact_number">Contact Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="account">Account</string>
</resources>