<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/et_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LOGIN">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abrilfatface"
        android:gravity="center"
        android:text="@string/welcome_nback"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.card.MaterialCardView
        style="@style/custom_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="1.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_username_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:placeholderTextColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username_login"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:drawableStart="@drawable/baseline_email_24"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/black"
                        android:ems="10"
                        android:hint="Username"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColorHint="#757575"
                        tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:passwordToggleEnabled="true"
                    app:placeholderTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_username_login">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/black"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColorHighlight="@color/black"
                        android:textColorLink="@color/black"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_forgot_password_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/app_theme"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.95"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_password_login"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btn_Log_in"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="200dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/abrilfatface"
                    android:text="@string/log_in"
                    android:textColorHighlight="@color/white"
                    android:textColorLink="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_password_login" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_Log_in"
                    app:layout_constraintVertical_bias="0.295">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/don_t_have_an_account" />

                    <TextView
                        android:id="@+id/tv_signup_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/sign_up"
                        android:textColor="#2196F3"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>