<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Signup">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:fontFamily="@font/abrilfatface"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/nothing"
        style="@style/custom_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="1.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:placeholderTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="16dp"
                        android:drawableStart="@drawable/user_name_asset"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/black"
                        android:ems="10"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColorHighlight="@color/black"
                        android:textColorLink="@color/black"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:placeholderTextColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="32dp"
                        android:drawableStart="@drawable/user_name_asset"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/black"
                        android:ems="10"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColorHighlight="@color/black"
                        android:textColorLink="@color/black"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_contactnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:placeholderTextColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_lastname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_contactnumber"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="32dp"
                        android:drawableStart="@drawable/image_contect_number"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/black"
                        android:ems="10"
                        android:hint="@string/contact_number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:padding="8dp"
                        android:textColorHighlight="@color/black"
                        android:textColorLink="@color/black"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:placeholderTextColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_contactnumber">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="32dp"
                        android:drawableStart="@drawable/baseline_email_24"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/black"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColorHighlight="@color/black"
                        android:textColorLink="@color/black"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:placeholderTextColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="32dp"
                        android:drawableStart="@drawable/user_name_asset"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/black"
                        android:ems="10"
                        android:hint="User Name"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textColorHighlight="@color/black"
                        android:textColorLink="@color/black"
                        tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:hintTextColor="@color/black"
                    app:placeholderTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:passwordToggleEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="32dp"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/black"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColorHighlight="@color/black"
                        android:textColorLink="@color/black"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_con_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:placeholderTextColor="@color/black"
                    app:passwordToggleEnabled="true"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_con_password"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="32dp"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/black"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColorHighlight="@color/black"
                        android:textColorLink="@color/black"
                        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/abrilfatface"
                    android:text="@string/sign_in"
                    android:textColorHighlight="@color/white"
                    android:textColorLink="@color/white"
                    app:cornerRadius="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_con_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sign_in">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/do_have_an_account" />

                    <TextView
                        android:id="@+id/tv_Login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/log_in"
                        android:textColor="@color/app_theme"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>